[package]
name = "frayed"
version = "0.1.0"
edition = "2021"
authors = ["Shane Celis <shane.celis@gmail.com>"]
description = "Unfused and unashamed iterators"
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/shanecelis/frayed"
homepage = "https://github.com/shanecelis/frayed"


[dependencies]
